--- a/source/_posts/十大排序算法.md
+++ b/source/_posts/十大排序算法.md
@@ -3,6 +3,9 @@ title: 十大排序算法--动态图
 date: 2019-06-14 17:23:20
 tags:
 ---
+since: 
+[公众号](https://mp.weixin.qq.com/s/D0-lOLFkfppTnvN9yK_lBg) 
+
 **_`No.1 冒泡排序`_**
 
 冒泡排序无疑是最为出名的排序算法之一，从序列的一端开始往另一端冒泡（你可以从左往右冒泡，也可以从右往左冒泡，看心情），依次比较相邻的两个数的大小（到底是比大还是比小也看你心情）。
@@ -562,7 +565,7 @@ tags:
         }
     }
  
-since: [公众号](https://mp.weixin.qq.com/s/D0-lOLFkfppTnvN9yK_lBg) 
+
  
  
  
